--- a/package.json
+++ b/package.json
@@ -1,41 +1,43 @@
 {
-    "name": "SOLANA-WALLET-GENERATOR",
-    "version": "1.0.0",
-    "description": "A script to generate multiple Solana wallets (PublicKey, Base58 PrivateKey, Mnemonic) with console output and file saving. This script is created by CWS",
-    "main": "index.js",
-    "type": "module",
-    "scripts": {
-        "start": "node index.js",
-        "test": "echo \"Error: no test specified\" && exit 1"
-    },
-    "keywords": [
-        "solana",
-        "wallet",
-        "generator",
-        "crypto",
-        "blockchain",
-        "mnemonic",
-        "private key"
-    ],
-    "author": "Your Name / Shashi",
-    "license": "MIT",
-    "dependencies": {
-        "@mysten/sui": "^1.44.0",
-        "@mysten/sui.js": "^0.54.1",
-        "@noble/hashes": "^1.5.0",
-        "@solana/web3.js": "^1.98.4",
-        "aptos": "^1.22.1",
-        "bip39": "^3.1.0",
-        "bitcoinjs-lib": "^6.1.5",
-        "bs58": "^5.0.0",
-        "buffer": "^6.0.3",
-        "chalk": "^5.6.2",
-        "ed25519-hd-key": "^1.3.0",
-        "ethers": "^6.15.0",
-        "exceljs": "^4.4.0",
-        "moment": "^2.30.1",
-        "readline": "^1.3.0",
-        "readline-sync": "^1.4.10",
-        "tiny-secp256k1": "^2.2.3"
-    }
+  "name": "multichain",
+  "version": "1.0.0",
+  "description": "A script to generate multiple Solana wallets (PublicKey, Base58 PrivateKey, Mnemonic) with console output and file saving. This script is created by CWS",
+  "main": "index.js",
+  "type": "module",
+  "scripts": {
+    "start": "node index.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [
+    "solana",
+    "apt",
+    "evm",
+    "sui",
+    "wallet",
+    "generator",
+    "crypto",
+    "blockchain",
+    "mnemonic",
+    "private key"
+  ],
+  "license": "MIT",
+  "dependencies": {
+    "@mysten/sui": "^1.44.0",
+    "@mysten/sui.js": "^0.54.1",
+    "@noble/hashes": "^1.5.0",
+    "@solana/web3.js": "^1.98.4",
+    "aptos": "^1.22.1",
+    "bip39": "^3.1.0",
+    "bitcoinjs-lib": "^6.1.5",
+    "bs58": "^5.0.0",
+    "buffer": "^6.0.3",
+    "chalk": "^5.6.2",
+    "ed25519-hd-key": "^1.3.0",
+    "ethers": "^6.15.0",
+    "exceljs": "^4.4.0",
+    "moment": "^2.30.1",
+    "readline": "^1.3.0",
+    "readline-sync": "^1.4.10",
+    "tiny-secp256k1": "^2.2.3"
+  }
 }
